# python-alter-falter

./: .gitignore  AlterFalter.py  README.md  _AlterFalter.code-workspace  config.json  pyproject.toml  setup.py
